--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -13,12 +13,12 @@ header{
     margin: 0;
 }
 .projects{
-    margin: 10%;
+    margin: 5%;
     text-align: left;
 }
 .headerText{
     width: 100%;
-    height: 300px;
+    height: 200px;
     font-family: 'Open Sans', sans-serif;
     font-size: 25px;
     color: white;
@@ -52,19 +52,10 @@ nav{
 .spacer{
     flex-grow: 2;
 }
-.lowerBody{
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-left: 10%;
-}
-.showcase {
+.projects{
     font-family: 'Open Sans', sans-serif;
-    background-color: #00ADB5;
-    text-align: left;
-    padding: 5%;
-    width: 30%;
+}
+.aboutMeBlock{
+    margin: 5%;
 }
 
-.showcase ul{
-    list-style: none;
-}
