--- a/src/aboutme.css
+++ b/src/aboutme.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #EEEEEE;
+    background-color: black;
     margin: 0;
 }
 .headerListItem a{
@@ -36,7 +36,7 @@ header{
 nav{
     padding: 30px;
     width: 100%;
-    background-color: #222831;
+    background-color: black;
 }
 
 .nav_links{
@@ -57,7 +57,8 @@ nav{
 }
 .aboutMeBlock{
     margin: 5%;
-    font-size: larger   ;
+    font-size: larger;
+    color: white;
 }
 .intPara{
     display: flex;
