--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #EEEEEE;
+    background-color: black;
     margin: 0;
 }
 
@@ -53,6 +53,7 @@ header {
 }
 
 .header-title {
+    font-size: 90px;
     margin-bottom: 30px;
 }
 
@@ -84,11 +85,12 @@ nav {
 
 .showcase {
     font-family: 'Open Sans', sans-serif;
+    width: 100%;
+    height: auto;
+    background-color: black;
     color: white;
-    text-align: left;
+    text-align: center;
     position: absolute;
-    top: 50%;
-    left: 3%;
     z-index: 1;
 }
 
@@ -112,4 +114,50 @@ nav {
     color: white;
     z-index: 2;
     font-family: sans-serif;
+}
+
+.skills-list {
+    padding: 0 5%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 50px;
+}
+
+.skills-list > img{
+    height: 10%;
+    width: 10%;
+}
+
+hr {
+    background-color: white;
+    width: 80%;
+    height: 5px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.redirect {
+    font-size: 70px;
+    display: inline-block; /* Ensures the element respects padding and margins */
+    animation: colorCycle 3s infinite; /* 5 seconds cycle, repeat infinitely */
+}
+
+@keyframes colorCycle {
+    0% {
+        color: red;
+    }
+    25% {
+        color: blue;
+    }
+    50% {
+        color: green;
+    }
+    75% {
+        color: orange;
+    }
+    100% {
+        color: red; /* Loops back to red */
+    }
 }
